--- a/src/app/modules/admin/components/order-item-details/order-item-details.component.html
+++ b/src/app/modules/admin/components/order-item-details/order-item-details.component.html
@@ -83,7 +83,7 @@
             <br>₹{{Orderdetails.totalAmount}}.00
           </li>
           <li><b>Order status</b>
-            <br>{{Orderdetails.mobileNumber}}
+            <br>{{Orderdetails.status}}
           </li>
           <span class="icons">
             <!-- <span class="float-right" data-bs-toggle="tooltip" title="Track Order" id="tooltip"> <i
