--- a/src/app/product-sku-detail/product-sku-detail.component.scss
+++ b/src/app/product-sku-detail/product-sku-detail.component.scss
@@ -225,6 +225,32 @@ position: absolute;
     font-size: 16px;
     margin-left: 5px;
   }
+  #left-arrow{
+    margin-top: 70px;
+    margin-left: 20px;
+    position: absolute;
+  }
+
+
+
+
+  .spinner-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+  
+  .spinner {
+    display: inline-block;
+    width: 64px;
+    height: 64px;
+  }
   
   
   @media only screen and (max-width: 800px) {
