implemented update staff roles functionality.......

--- a/src/app/modules/admin/components/add-staff/add-staff.component.scss
+++ b/src/app/modules/admin/components/add-staff/add-staff.component.scss
@@ -86,4 +86,15 @@ button {
     .mat-dialog-title{
     margin-left: 300px;
     } 
+    #crossbtn{
+        margin-left: 680px;
+        margin-top: -60px;
+        position: absolute;
+         color: red;
+      }
+      #selectstaffrole{
+        margin-left: 300px;
+        margin-top: -140px;
+        position: absolute;
+    }
 }
