--- a/src/app/modules/admin/components/add-staff/add-staff.component.html
+++ b/src/app/modules/admin/components/add-staff/add-staff.component.html
@@ -1,11 +1,11 @@
-<h1 mat-dialog-title style="margin-left: 430px;">Add New Staff</h1>
+<h1 mat-dialog-title style="margin-left: 430px;font-family: initial;font-weight: bolder;">Add New Staff</h1>
 <button mat-raised-button color="" mat-dialog-close id="crossbtn">X</button>
 <div mat-dialog-content class="dialog-content" id="form">
     <form [formGroup]="addstaffform">
         <div>
             <div>
                 <mat-form-field class="catalogName">
-                    <mat-label>Staff Name</mat-label>
+                    <mat-label style="font-family: initial;font-weight: bolder;">Staff Name</mat-label>
                     <input matInput formControlName="staffName">
                     <div *ngIf="submitted && addstaffform.get('staffName').invalid">
                     </div>
@@ -13,14 +13,14 @@
 
 
                 <mat-form-field class="catalogDesc">
-                    <mat-label>Email Id</mat-label>
+                    <mat-label style="font-family: initial;font-weight: bolder;">Email Id</mat-label>
                     <input matInput formControlName="emailId">
                     <div *ngIf="submitted && addstaffform.get('emailId').invalid">
                     </div>
                 </mat-form-field>
 
                 <mat-form-field class="mobileNo">
-                    <mat-label>Mobile Number</mat-label>
+                    <mat-label style="font-family: initial;font-weight: bolder;">Mobile Number</mat-label>
                     <input matInput formControlName="mobileNo">
                     <div *ngIf="submitted && addstaffform.get('mobileNo').invalid">
                     </div>
@@ -28,7 +28,7 @@
 
 
                 <mat-form-field class="pincode">
-                    <mat-label>Pincode</mat-label>
+                    <mat-label style="font-family: initial;font-weight: bolder;">Pincode</mat-label>
                     <input matInput formControlName="pincode">
                     <div *ngIf="submitted && addstaffform.get('pincode').invalid">
                     </div>
@@ -36,19 +36,19 @@
             </div>
             <div>
                 <mat-form-field class="area">
-                    <mat-label>Area</mat-label>
+                    <mat-label style="font-family: initial;font-weight: bolder;">Area</mat-label>
                     <input matInput formControlName="area">
                     <div *ngIf="submitted && addstaffform.get('area').invalid">
                     </div>
                 </mat-form-field>
                 <mat-form-field class="city">
-                    <mat-label>City</mat-label>
+                    <mat-label style="font-family: initial;font-weight: bolder;">City</mat-label>
                     <input matInput formControlName="city">
                     <div *ngIf="submitted && addstaffform.get('city').invalid">
                     </div>
                 </mat-form-field>
                 <mat-form-field class="state">
-                    <mat-label>State</mat-label>
+                    <mat-label style="font-family: initial;font-weight: bolder;">State</mat-label>
                     <input matInput formControlName="state">
                     <div *ngIf="submitted && addstaffform.get('state').invalid">
                     </div>
@@ -58,7 +58,7 @@
                 <div formArrayName="staffRole" class="product-catalog" >
                     <mat-form-field id="selectstaffrole">
             
-                      <mat-label>Select Staff Role</mat-label>
+                      <mat-label style="font-family: initial;font-weight: bolder;">Select Staff Role</mat-label>
                       <mat-select multiple [(value)]="selectedstaffroles">
             
                        
@@ -79,7 +79,7 @@
             <div>
 
                 <mat-form-field class="dob">
-                    <mat-label>DOB</mat-label>
+                    <mat-label style="font-family: initial;font-weight: bolder;">DOB</mat-label>
                     <input matInput [matDatepicker]="picker" formControlName="dob">
                     <mat-hint>MM/DD/YYYY</mat-hint>
                     <mat-datepicker-toggle matIconSuffix [for]="picker" id="calicon"></mat-datepicker-toggle>
@@ -89,7 +89,7 @@
                 </mat-form-field>
 
                 <mat-form-field class="startdt">
-                    <mat-label>Start Date</mat-label>
+                    <mat-label style="font-family: initial;font-weight: bolder;">Start Date</mat-label>
                     <input matInput [matDatepicker]="startdt" formControlName="startDt">
                     <mat-hint>MM/DD/YYYY</mat-hint>
                     <mat-datepicker-toggle matIconSuffix [for]="startdt" id="calicon"></mat-datepicker-toggle>
@@ -99,7 +99,7 @@
                 </mat-form-field>
 
                 <mat-form-field class="enddt" style="height: 10px;">
-                    <mat-label>End Date</mat-label>
+                    <mat-label style="font-family: initial;font-weight: bolder;">End Date</mat-label>
                     <input matInput [matDatepicker]="enddt" formControlName="endDt">
                     <mat-hint>MM/DD/YYYY</mat-hint>
                     <mat-datepicker-toggle matIconSuffix [for]="enddt" id="calicon"></mat-datepicker-toggle>
@@ -112,8 +112,9 @@
         </div>
 
         <div mat-dialog-action [align]="'center'">
-            <button mat-raised-button color="warn" mat-dialog-close>Cancel</button>
-            <button style="margin-left:10px" mat-raised-button color="primary" (click)="addSatff()">Submit</button>
+            <button style="margin-left:10px;font-family: initial;font-weight: bolder;" mat-raised-button color="primary" (click)="addSatff()">Submit</button>
+            <button mat-raised-button color="warn" mat-dialog-close style="font-family: initial;font-weight: bolder;margin-left:20px;">Cancel</button>
+           
             <div *ngIf="submitted && !addstaffform.valid">All fields are required.</div>
         </div>
     </form>
