--- a/src/app/modules/admin/components/footer/footer.component.html
+++ b/src/app/modules/admin/components/footer/footer.component.html
@@ -1,8 +1,8 @@
 <!-- <p>footer works!</p> -->
-<footer class="bg-light text-center text-lg-start">
-    <!-- Copyright -->
+<!-- <footer class="bg-light text-center text-lg-start">
+    
     <div class="text-center p-3" style="background-color: rgba(20, 5, 225, 0.2);">
       © 2020 Copyright:EvaDella.com
     </div>
-    <!-- Copyright -->
-  </footer>
+  
+  </footer> -->
