--- a/src/app/modules/admin/components/product-dialog/product-dialog.component.scss
+++ b/src/app/modules/admin/components/product-dialog/product-dialog.component.scss
@@ -67,10 +67,14 @@ button {
     margin-top: -50px;
     color: red;
   }
-  
+  h1{
+    margin-left: 400px;
+    font-family: initial;
+    font-weight: bolder;
+  }
 @media screen and (min-width: 360px) and (max-width: 1400px) {
     #addnewcatalogbtn{
-        margin-left: 280px; 
+        margin-left: 300px; 
         margin-top: -280px;
     }
 
@@ -79,7 +83,16 @@ button {
     }
 
     #crossbtn{
-        margin-left: 200px;
+        margin-left: 600px;
         margin-top: -50px;
       }
+      #search_tag{
+        margin-left: 40px;
+        font-family: initial;
+    }
+    h1{
+        margin-left: 210px;
+        position: absolute;
+        margin-top: -30px;
+    }
   }
