--- a/src/app/product-sku-detail/product-sku-detail.component.scss
+++ b/src/app/product-sku-detail/product-sku-detail.component.scss
@@ -4,12 +4,13 @@
  */
 .box{
    
-    margin-top: 70px;
+    margin-top: 50px;
     margin-left: 80px;
    border-style: ridge;
-   width:1700px ;
+   width:1450px ;
    height: auto;
-   border-radius: 10px;
+   border-radius: 20px;
+   
 
 }
 
@@ -24,13 +25,13 @@
   }
   
   .textarea{
-    width: 410px;
+    width: 360px;
     height: auto;
     margin-left: 30px;
   }
   .button{
-    margin-left: 650px;
-    margin-top: 100px;
+    margin-left: 610px;
+    margin-top: 60px;
     width: 500px;
   
   
@@ -185,7 +186,7 @@
   margin-left:50px;
 }
 #Gst{
-  margin-left:950px;
+  margin-left:750px;
 position: absolute;
    margin-top: 10px;
   border-style: ridge;
@@ -202,7 +203,7 @@ position: absolute;
 //   margin-left: 220px;
 // }
 #productId{
-  margin-left: 5px;
+  margin-left: 3px;
   cursor: not-allowed;
 }
 .form-label{
@@ -253,15 +254,32 @@ position: absolute;
   }
   
   
-  @media only screen and (max-width: 800px) {
+  // @media only screen and (max-width: 800px) {
    
-    [class*="col-2"] {
-      width: 60%;
-      padding: 0px;
+  //   [class*="col-3"] {
+  //     width: 60%;
+  //     padding: 0px;
+  //   }
+  // }
+    @media screen and (min-width: 360px) and (max-width: 1350px) {
+      [class*="col-3"] {
+        width: 30%;
+        padding: 0px;
+      }
+      .box{
+   
+        margin-top: 70px;
+        margin-left: 80px;
+       border-style: ridge;
+       width:1100px ;
+       height: auto;
+       border-radius: 10px;
+       overflow-y: auto;
+    
     }
-   
+     }
+    
   
   
-  }
   
   
