--- a/src/app/modules/admin/components/start-packing-action/start-packing-action.component.html
+++ b/src/app/modules/admin/components/start-packing-action/start-packing-action.component.html
@@ -75,7 +75,7 @@
             </div>
             <label id="enterstafflablel">Enter Staff Code: </label>
             <div class="col-3" id="staffcd">
-                <input type="text" formControlName="staffCd" class="form-control">
+                <input type="number" formControlName="staffCd" class="form-control">
             </div>
 
             <div class="col-3" id="sbmtbtn">
