--- a/src/app/modules/admin/components/verify-payment/verify-payment.component.html
+++ b/src/app/modules/admin/components/verify-payment/verify-payment.component.html
@@ -77,7 +77,7 @@
                 </div>
                 <label style="font-size: 18px; margin-top:80px;margin-left: 20px;">Enter Staff Code: </label>
                 <div class="col-3" id="staffcd">
-                    <input type="text" formControlName="staffCd" class="form-control">
+                    <input type="number" formControlName="staffCd" class="form-control">
                 </div>
 
                 <div class="col-3" id="sbmtbtn">
