solved some bugs and added css stylings.....

--- a/src/app/modules/admin/components/order-item-details/order-item-details.component.html
+++ b/src/app/modules/admin/components/order-item-details/order-item-details.component.html
@@ -74,10 +74,10 @@
             <br>#{{Orderdetails.orderId}}
           </li>
           <li><b>Submit Date</b>
-            <br>{{Orderdetails.statusCd}}
+            <br>{{Orderdetails.orderSubmitDtTm |date}}
           </li>
           <li><b>Expected Date</b>
-            <br>{{Orderdetails.orderSubmitDtTm}}
+            <br>{{Orderdetails.estimatedTime | date}}
           </li>
           <li><b>Total Amount</b>
             <br>₹{{Orderdetails.totalAmount}}.00
