--- a/src/app/modules/admin/components/products/products.component.scss
+++ b/src/app/modules/admin/components/products/products.component.scss
@@ -101,6 +101,11 @@ table {
     margin-left: 20px;
     margin-top: -10px;
   }
+  span:hover{
+    color:green;
+    transition: 1s;
+    cursor: pointer;
+  }
 
   @media screen and (min-width: 500px) and (max-width: 1350px) {
     #addnewproductbtn {
