--- a/src/app/modules/admin/components/finish-shipping-action/finish-shipping-action.component.html
+++ b/src/app/modules/admin/components/finish-shipping-action/finish-shipping-action.component.html
@@ -5,7 +5,7 @@
  <form [formGroup]="finishshippingform" id="form">
 
 
-    <h1 id="headding"> Finish Shipping</h1>
+    <h1 id="headding" style="font-family: initial;font-weight: bolder;"> Finish Shipping</h1>
     <button mat-raised-button color="" mat-dialog-close  id="crossbtn">X</button>
  
     <div class="card" class="card1">
@@ -14,9 +14,9 @@
             <div class="row">
                 <div>
                     <img src="https://media.istockphoto.com/id/1095468748/vector/qr-code-abstract-vector-modern-bar-code-sample-for-smartphone-scanning-isolated-on-white.jpg?s=612x612&w=0&k=20&c=Jnh2TAkAFm7QpaBgCyCuGbCA6nomDfk4-XiTsBhbHFk=" width="120px;" height="120px" id="scanner">
-                     <b>Order Track Ref:</b>
+                     <b>Order Track Ref &nbsp;&nbsp;&nbsp;:</b>
                      <p>{{Orderdetails.orderTrackRef}}</p>
-                    <b>OrderId:</b>
+                    <b>OrderId &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b>
                     <p><input type="text" formControlName="orderId" placeholder="{{Orderdetails.orderId}}" [(ngModel)]="Orderdetails.orderId" [ngClass]="{'hide-input-border': shouldHideBorder}" readonly></p> 
                     <b>Name
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b>
@@ -38,7 +38,7 @@
                     <p>{{Orderdetails.city}}</p>
                     <b>LandMark&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b>
                     <p>{{Orderdetails.landmark}}</p>
-                    <b>Mobile Number&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b>
+                    <b>Mobile Number&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b>
                     <p>{{Orderdetails.mobileNo}}</p>
                     <b>State
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b>
@@ -74,7 +74,7 @@
                     placeholder="{{Orderdetails.orderId}}" hidden>
 
             </div>
-            <label id="enterstafflablel">Enter Staff Code: </label>
+            <label id="enterstafflablel" style="font-family: initial;font-weight: bolder;">Enter Staff Code: </label>
             <div class="col-3" id="staffcd">
                 <input type="number" formControlName="staffCd" class="form-control">
             </div>
