--- a/src/app/modules/admin/components/staff-list/staff-list.component.html
+++ b/src/app/modules/admin/components/staff-list/staff-list.component.html
@@ -38,7 +38,7 @@
         <ng-container matColumnDef="Actions">
             <th mat-header-cell *matHeaderCellDef>Actions</th>
             <td mat-cell *matCellDef="let element">
-                <div>
+                <div data-bs-toggle="tooltip" data-bs-placement="bottom" title="Update Staff" style="cursor: pointer;">
                     <i class="bi bi-pencil-square"></i>
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         class="bi bi-pencil-square" viewBox="0 0 16 16" (click)="updateStaff(element.opStaffId)"
